maven_versions = dict(
    agp = "8.5.0-alpha06",
    kotlin = "1.9.23",
    accompanist = "0.35.0-alpha",
    activity = "1.9.0",
    camera = "1.4.0-alpha05",
    compose_bom = "2024.05.00",
    compose_compiler = "1.5.13",
    concurrent = "1.1.0",
    core = "1.13.1",
    datastore = "1.1.0",
    fragment = "1.7.0",
    lifecycle = "2.7.0",
    mlkit = "17.2.0",
    qrose = "1.0.1",
    voyager = "1.0.0",
    collection = "1.4.0",
    jna = "5.14.0",
)
maven_artifacts = [
    "androidx.compose.animation:animation",
    "androidx.compose.animation:animation-core",
    "androidx.compose.animation:animation-graphics",
    "androidx.compose.foundation:foundation",
    "androidx.compose.foundation:foundation-layout",
    "androidx.compose.material:material",
    "androidx.compose.material:material-icons-core",
    "androidx.compose.material:material-icons-extended",
    "androidx.compose.material:material-icons-extended-android",
    "androidx.compose.material:material-ripple",
    "androidx.compose.material3:material3",
    "androidx.compose.material3:material3-window-size-class",
    "androidx.compose.runtime:runtime",
    "androidx.compose.runtime:runtime-livedata",
    "androidx.compose.runtime:runtime-rxjava2",
    "androidx.compose.runtime:runtime-rxjava3",
    "androidx.compose.runtime:runtime-saveable",
    "androidx.compose.ui:ui",
    "androidx.compose.ui:ui-geometry",
    "androidx.compose.ui:ui-graphics",
    "androidx.compose.ui:ui-test",
    "androidx.compose.ui:ui-test-junit4",
    "androidx.compose.ui:ui-test-manifest",
    "androidx.compose.ui:ui-text",
    "androidx.compose.ui:ui-text-google-fonts",
    "androidx.compose.ui:ui-tooling",
    "androidx.compose.ui:ui-tooling-data",
    "androidx.compose.ui:ui-tooling-preview",
    "androidx.compose.ui:ui-unit",
    "androidx.compose.ui:ui-util",
    "androidx.compose.ui:ui-viewbinding",
    "org.jetbrains.kotlin:kotlin-stdlib:{}".format(maven_versions["kotlin"]),
    "org.jetbrains.kotlin:kotlin-stdlib-jdk8:{}".format(maven_versions["kotlin"]),
    "org.jetbrains.kotlin:kotlin-stdlib-jdk7:{}".format(maven_versions["kotlin"]),
    "org.jetbrains.kotlin:kotlin-reflect:{}".format(maven_versions["kotlin"]),
    "androidx.collection:collection:{}".format(maven_versions["collection"]),
    "androidx.collection:collection-jvm:{}".format(maven_versions["collection"]),
    "androidx.collection:collection-ktx:{}".format(maven_versions["collection"]),
    "net.java.dev.jna:jna:aar:{}".format(maven_versions["jna"]),
    "androidx.activity:activity:{}".format(maven_versions["activity"]),
    "androidx.activity:activity-ktx:{}".format(maven_versions["activity"]),
    "androidx.activity:activity-ktx:aar:{}".format(maven_versions["activity"]),
    "androidx.activity:activity-compose:{}".format(maven_versions["activity"]),
    "androidx.compose.compiler:compiler:{}".format(maven_versions["compose_compiler"]),
    "androidx.core:core:{}".format(maven_versions["core"]),
    "androidx.core:core-ktx:{}".format(maven_versions["core"]),
    "androidx.concurrent:concurrent-futures:{}".format(maven_versions["concurrent"]),
    "androidx.concurrent:concurrent-futures-ktx:{}".format(maven_versions["concurrent"]),
    "androidx.fragment:fragment:{}".format(maven_versions["fragment"]),
    "androidx.fragment:fragment-ktx:{}".format(maven_versions["fragment"]),
    "androidx.fragment:fragment-ktx:aar:{}".format(maven_versions["fragment"]),
    "androidx.fragment:fragment-compose:{}".format(maven_versions["fragment"]),
    "androidx.fragment:fragment-testing:{}".format(maven_versions["fragment"]),
    "androidx.fragment:fragment-testing-manifest:{}".format(maven_versions["fragment"]),
    "androidx.lifecycle:lifecycle-common:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-common-java8:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-compiler:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-livedata-ktx:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-livedata-core-ktx:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-process:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-reactivestreams-ktx:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-runtime:aar:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-runtime-ktx:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-runtime-testing:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-service:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-viewmodel-ktx:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-viewmodel-compose:{}".format(maven_versions["lifecycle"]),
    "androidx.lifecycle:lifecycle-viewmodel-savedstate:{}".format(maven_versions["lifecycle"]),
    "io.github.alexzhirkevich:qrose:{}".format(maven_versions["qrose"]),
    "androidx.camera:camera-camera2:{}".format(maven_versions["camera"]),
    "androidx.camera:camera-core:{}".format(maven_versions["camera"]),
    "androidx.camera:camera-extensions:{}".format(maven_versions["camera"]),
    "androidx.camera:camera-lifecycle:{}".format(maven_versions["camera"]),
    "androidx.camera:camera-mlkit-vision:{}".format(maven_versions["camera"]),
    "androidx.camera:camera-video:{}".format(maven_versions["camera"]),
    "androidx.camera:camera-view:{}".format(maven_versions["camera"]),
    "com.google.mlkit:barcode-scanning:{}".format(maven_versions["mlkit"]),
    "cafe.adriel.voyager:voyager-navigator-android:{}".format(maven_versions["voyager"]),
    "cafe.adriel.voyager:voyager-screenmodel-android:{}".format(maven_versions["voyager"]),
    "cafe.adriel.voyager:voyager-tab-navigator-android:{}".format(maven_versions["voyager"]),
    "cafe.adriel.voyager:voyager-transitions:{}".format(maven_versions["voyager"]),
    "androidx.datastore:datastore-preferences-android:{}".format(maven_versions["datastore"]),
    "com.google.accompanist:accompanist-permissions:{}".format(maven_versions["accompanist"]),
]
maven_boms = [
    "androidx.compose:compose-bom:{}".format(maven_versions["compose_bom"]),
]

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_deps",
    artifacts = maven_artifacts,
    boms = maven_boms,
    fail_if_repin_required = True,
    lock_file = "//:manifest_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    resolver = "maven",
    use_starlark_android_rules = True,
    aar_import_bzl_label = "@rules_android//android:rules.bzl",
)
use_repo(maven, "maven_deps")
