# SPDX-FileCopyrightText: 2024 Felix Hilgers <contact@fhilgers.com>
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "qrcloak-core"
version.workspace = true


[dependencies]
age = "0.10.0"
base45 = "3.1.0"
bytes = { version = "1.6.0", features = ["serde"] }
flate2 = "1.0.28"
getrandom = "0.2.14"
image = { version = "0.25.1", optional = true }
qrcodegen = { workspace = true, optional = true }
quircs = { version = "0.10.2", optional = true }
rand = "0.8.5"
schemars = { version = "0.8.16", optional = true }
secrecy = { version = "0.8.0", features = ["bytes", "serde"] }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = { version = "1.0.115", optional = true }
thiserror = "1.0.58"
tsify-next = { version = "0.5.3", features = ["js"], optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { version = "=0.2.91", optional = true }

[features]
extract = ["json", "quircs"]
generate = ["image", "json", "qrcodegen"]
json = ["schemars", "serde", "serde_json"]
uniffi = ["dep:uniffi"]
wasm = ["serde", "serde-wasm-bindgen", "tsify-next", "wasm-bindgen"]

[dev-dependencies]
image = { version = "0.25.1", features = ["png"] }
insta = { version = "1.38.0", features = ["json"] }
