load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sources",
    srcs = glob([
        "src/**/*.rs",
        "Cargo.toml",
    ]),
)

rust_library(
    name = "qrcodegen",
    srcs = glob([
        "src/**/*.rs",
    ]),
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "qrcodegen-test",
    crate = ":qrcodegen",
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
    deps = all_crate_deps(normal_dev = True),
)
