# SPDX-FileCopyrightText: Project Nayuki
# SPDX-FileCopyrightText: 2024 Felix Hilgers <contact@fhilgers.com>
#
# SPDX-License-Identifier: MIT

[package]
authors = ["Felix Hilgers <contact@fhilgers.com>", "Project Nayuki"]
categories = ["encoding", "multimedia::images"]
description = "High-quality QR Code generator library"
edition.workspace = true
keywords = ["barcode", "encoder", "image", "qr-code"]
license = "MIT"
name = "qrcodegen"
version.workspace = true

[dev-dependencies]
image = "0.25.1"
proptest = "1.4.0"
proptest-derive = "0.4.0"
quickcheck = "1.0.3"
quircs = "0.10.2"
