# SPDX-FileCopyrightText: 2024 Felix Hilgers <contact@fhilgers.com>
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "wasm-bindgen-brand"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
